--- a/app/src/main/res/drawable/rounded_white.xml
+++ b/app/src/main/res/drawable/rounded_white.xml
@@ -2,12 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item >
         <shape>
-            <solid android:color="@android:color/white"/>
+            <solid android:color="@android:color/transparent"/>
             <stroke android:width="0.1dp"
 
-                android:color="#f6f6f6"/>
+                android:color="@android:color/transparent"/>
             <corners
-                android:radius="40dp"
+                android:bottomLeftRadius="40dp"
+                android:topLeftRadius="40dp"
+
                 />
             />
 
