--- a/app/src/main/res/layout/fragment_customer__main_.xml
+++ b/app/src/main/res/layout/fragment_customer__main_.xml
@@ -17,6 +17,7 @@
         <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/toolbar"
             android:layout_width="fill_parent"
+            android:visibility="gone"
             android:layout_height="?attr/actionBarSize"
             android:background="#79da59"
             android:minHeight="?attr/actionBarSize">
