--- a/app/src/main/res/layout/item_product_item.xml
+++ b/app/src/main/res/layout/item_product_item.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="5dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="#f7f7f7"
+    android:gravity="center">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        card_view:cardCornerRadius="4dp">
+        android:background="@drawable/rounded"
+        card_view:cardCornerRadius="2dp"
+        card_view:cardElevation="2dp">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/single_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="@dimen/_5sdp"
             android:weightSum="2">
 
             <LinearLayout
@@ -30,78 +32,88 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
+                    android:gravity="center"
                     android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/image"
-                        android:layout_width="100dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/pepsi" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="105dp">
+
+
+                        <ImageView
+                            android:id="@+id/image"
+                            android:layout_width="match_parent"
+                            android:layout_height="100dp"
+                            android:adjustViewBounds="true"
+                            android:background="@drawable/rounded"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/pepsi_2" />
+
+
+                        <TextView
+                            android:id="@+id/price"
+                            android:layout_width="60dp"
+                            android:layout_height="20dp"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignParentEnd="true"
+                            android:background="@drawable/text_background"
+                            android:gravity="center"
+                            android:text="2 SR"
+                            android:textColor="#fff"
+                            android:textStyle="bold" />
+                    </RelativeLayout>
 
                     <TextView
                         android:id="@+id/name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:paddingLeft="@dimen/_10sdp"
-                        android:text="Pepsi"
-                        android:textColor="#898b8a"
-                        android:textStyle="bold" />
+                        android:text="Pepsi Ten Small"
+                        android:textColor="#3c3a3b" />
 
-                    <TextView
-                        android:id="@+id/address"
+                    <View
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:paddingLeft="@dimen/_10sdp"
-                        android:text="cold drink"
-                        android:textColor="#898b8a" />
-
-                    <TextView
-                        android:id="@+id/price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:paddingLeft="@dimen/_10sdp"
-                        android:text="2 SR"
-                        android:textColor="#6fc751"
-                        android:textStyle="bold" />
+                        android:layout_height="1.5dp"
+                        android:layout_marginTop="1dp"
+                        android:background="#f6f6f6" />
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/_5sdp">
+                        android:orientation="horizontal">
 
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:orientation="horizontal">
 
                             <ImageView
                                 android:id="@+id/minus"
                                 android:layout_width="40dp"
-                                android:layout_height="40dp"
-                                android:padding="@dimen/_5sdp"
-                                android:src="@drawable/minus" />
+                                android:layout_height="28dp"
+                                android:padding="5dp"
+                                android:scaleType="center"
+                                android:src="@drawable/minus_icon" />
 
                             <TextView
                                 android:id="@+id/vlaue"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="7dp"
-                                android:layout_marginTop="10dp"
+                                android:layout_height="match_parent"
+                                android:gravity="center"
+                                android:padding="5dp"
                                 android:text="2"
-                                android:textColor="#898b8a" />
+                                android:textColor="#000"
+                                android:textStyle="bold" />
 
                             <ImageView
                                 android:id="@+id/add"
                                 android:layout_width="40dp"
-                                android:layout_height="40dp"
-                                android:padding="@dimen/_5sdp"
-                                android:src="@drawable/plus" />
+                                android:layout_height="28dp"
+                                android:padding="5dp"
+                                android:scaleType="center"
+                                android:src="@drawable/plus_icon" />
                         </LinearLayout>
 
                     </LinearLayout>
@@ -113,4 +125,5 @@
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
 </LinearLayout>
