--- a/app/src/main/res/drawable/rounded_white.xml
+++ b/app/src/main/res/drawable/rounded_white.xml
@@ -1,19 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item >
-        <shape>
-            <solid android:color="@android:color/transparent"/>
-            <stroke android:width="0.1dp"
-
-                android:color="@android:color/transparent"/>
-            <corners
-                android:bottomLeftRadius="40dp"
-                android:topLeftRadius="40dp"
-
-                />
-            />
-
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item   android:bottom="3dp" >
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/white" />
         </shape>
-
     </item>
-</selector>
+</layer-list>
