--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context="com.webmarke8.app.gencart.Activities.Customer_Main">
+    tools:context="com.webmarke8.app.gencart.Activities.MainActivity">
 
 
     <FrameLayout
