--- a/app/src/main/res/layout/fragment_my_orders.xml
+++ b/app/src/main/res/layout/fragment_my_orders.xml
@@ -1,23 +1,32 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.webmarke8.app.gencart.Activities.Customer_Main$PlaceholderFragment">
+    android:background="#eeeeee"
+    android:orientation="vertical">
 
-
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+    <LinearLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:background="@color/green"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/navigation"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="@dimen/_7sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:minHeight="?attr/actionBarSize"
+            android:padding="@dimen/_2sdp"
+            android:src="@drawable/menue"
+            android:tint="@android:color/white" />
 
         <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbar1"
             android:layout_width="fill_parent"
-            android:visibility="gone"
             android:layout_height="?attr/actionBarSize"
             android:background="#79da59"
             android:minHeight="?attr/actionBarSize">
@@ -36,12 +45,12 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="50dp"
                     android:gravity="center"
-                    android:text="Catagories"
+                    android:text="My Orders"
                     android:textColor="#fff"
                     android:textSize="19sp"
                     android:textStyle="bold" />
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -64,36 +73,17 @@
             </LinearLayout>
 
         </android.support.v7.widget.Toolbar>
+    </LinearLayout>
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/green"
-            app:tabIndicatorColor="@android:color/white"
-            app:tabTextAppearance="@android:style/TextAppearance.Widget.TextView">
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/tabItem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Store" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/tabItem2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Items" />
-
-        </android.support.design.widget.TabLayout>
-
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/container"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/layout"
+        android:layout_centerHorizontal="true"
+        android:background="#eeeeee">
 
 
-</LinearLayout>
+    </android.support.v7.widget.RecyclerView>
+
+</RelativeLayout>
