--- a/app/src/main/res/layout/item_product_item.xml
+++ b/app/src/main/res/layout/item_product_item.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="#f7f7f7"
+    android:id="@+id/Click"
     android:gravity="center">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
