--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
+    android:id="@+id/Click"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:layout_width="220dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:padding="@dimen/_2sdp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="@dimen/_15sdp"
-            android:paddingRight="@dimen/_15sdp">
+            android:orientation="vertical">
 
 
             <android.support.v7.widget.CardView
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
                 android:orientation="horizontal"
-                android:padding="2dp">
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
