Design Update 2nd Phase and 2 apis Implemented

--- a/app/src/main/res/drawable-v24/button_border_layout.xml
+++ b/app/src/main/res/drawable-v24/button_border_layout.xml
@@ -2,12 +2,16 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#c0c6c6" />
+            <solid android:color="#40d466" />
         </shape>
     </item>
-    <item  android:right="3dp"  android:bottom="3dp"   >
+    <item
+        android:bottom="3dp"
+        android:top="3dp"
+        android:left="3dp"
+        android:right="3dp">
         <shape android:shape="rectangle">
-            <solid android:color="#f6f7f9" />
+            <solid android:color="@android:color/white" />
         </shape>
     </item>
 </layer-list>
