--- a/app/src/main/res/layout/item_my_order.xml
+++ b/app/src/main/res/layout/item_my_order.xml
@@ -85,6 +85,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:id="@+id/Open"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_marginLeft="30dp"
