--- a/app/src/main/res/drawable/layout_bottom_line.xml
+++ b/app/src/main/res/drawable/layout_bottom_line.xml
@@ -2,17 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#86ff5e" />
+            <solid android:color="#c7efba" />
         </shape>
     </item>
-    <item
-        android:bottom="2dp"
-        android:left="2dp"
-        android:right="2dp"
-        android:top="2dp">
+    <item android:bottom="3dp">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
         </shape>
     </item>
-    
 </layer-list>
