--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,17 +13,185 @@
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
+
+    <FrameLayout
+        android:id="@+id/container1"
         android:layout_width="match_parent"
-        android:layout_gravity="bottom"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#fff"
-        app:itemIconTint="#96cf84"
-        app:itemTextColor="#96cf84"
-        app:menu="@menu/bottom_navigation_items" />
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        tools:context="com.webmarke8.app.gencart.Fragments.StoreFragment">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="170dp"
+                android:background="@drawable/background_store"
+                android:gravity="left"
+                android:orientation="vertical"
+                android:scaleX="1"
+                android:scaleY="1">
+
+                <ImageView
+                    android:id="@+id/navigationDrawer"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="@dimen/_7sdp"
+                    android:layout_marginTop="@dimen/_7sdp"
+                    android:padding="@dimen/_2sdp"
+                    android:src="@drawable/menue"
+                    android:tint="@android:color/white" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/_20sdp"
+                        android:elevation="0dp"
+                        android:gravity="center"
+                        android:padding="@dimen/_2sdp"
+                        android:src="@drawable/back_icon"
+                        android:textAllCaps="false"
+                        android:tint="@android:color/white"
+                        android:visibility="gone" />
+
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="Stores"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/_17sdp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:focusable="false"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingLeft="@dimen/_20sdp"
+                    android:paddingRight="@dimen/_20sdp">
+
+                    <RelativeLayout
+                        android:layout_width="45dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/search_round">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="50dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:elevation="0dp"
+                            android:gravity="center"
+                            android:padding="@dimen/_2sdp"
+                            android:src="@drawable/filtericon"
+                            android:textAllCaps="false"
+                            android:tint="@android:color/white" />
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:padding="@dimen/_5sdp">
+
+                        <EditText
+                            android:id="@+id/TextSearch"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"
+                            android:background="@android:color/transparent"
+                            android:lines="1"
+                            android:paddingStart="10dp"
+                            android:textSize="12sp" />
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="3dp"
+                            android:src="@drawable/search_edittext_bottom"
+                            android:tint="@android:color/white" />
+                    </LinearLayout>
+
+
+                    <RelativeLayout
+                        android:id="@+id/Search"
+                        android:layout_width="45dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/search_round">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="50dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:elevation="0dp"
+                            android:gravity="center"
+                            android:padding="@dimen/_2sdp"
+                            android:src="@drawable/searchicon"
+                            android:textAllCaps="false"
+                            android:tint="@android:color/white" />
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/SwipeRefreshLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <ScrollView
+                    android:id="@+id/Scroll"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_weight="7"
+                    android:background="#f4f4f4"
+                    android:paddingTop="10dp">
+
+
+                    <com.webmarke8.app.gencart.Adapters.ExpandableHeightGridView
+                        android:id="@+id/gridview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginRight="@dimen/_5sdp"
+                        android:background="#f4f4f4"
+                        android:horizontalSpacing="@dimen/_5sdp"
+                        android:isScrollContainer="false"
+                        android:numColumns="2"
+                        android:stretchMode="columnWidth"
+                        android:verticalSpacing="@dimen/_5sdp" />
+
+                </ScrollView>
+            </android.support.v4.widget.SwipeRefreshLayout>
+
+        </LinearLayout>
+
+    </FrameLayout>
+
+
 </LinearLayout>
