--- a/app/src/main/res/layout/dialog_update_location.xml
+++ b/app/src/main/res/layout/dialog_update_location.xml
@@ -47,24 +47,30 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:background="@drawable/rounded_white" />
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_5sdp"
             android:gravity="center">
 
             <Button
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:text="ok" />
+                android:layout_height="40dp"
+                android:layout_marginRight="@dimen/_7sdp"
+                android:background="@drawable/button_border_layout"
+                android:text="ok"
+                android:textColor="#40d466" />
 
             <Button
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:text="Cencel" />
+                android:layout_height="40dp"
+                android:background="@drawable/button_border_layout"
+                android:text="Cencel"
+                android:textColor="#40d466" />
 
         </LinearLayout>
 
