--- a/app/src/main/res/layout/fragment_my_orders.xml
+++ b/app/src/main/res/layout/fragment_my_orders.xml
@@ -38,6 +38,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/Back"
                     android:layout_width="50dp"
                     android:layout_height="30dp"
                     android:src="@drawable/back_arrow" />
