--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#79da59"
     android:layout_height="match_parent"
+    android:background="#79da59"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/navigation"
         android:layout_width="45dp"
         android:layout_height="45dp"
+        android:layout_marginLeft="@dimen/_7sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:minHeight="?attr/actionBarSize"
-        android:layout_marginLeft="@dimen/_7sdp"
         android:padding="@dimen/_2sdp"
         android:src="@drawable/menue"
         android:tint="@android:color/white" />
@@ -31,6 +31,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/Back"
                 android:layout_width="50dp"
                 android:layout_height="30dp"
                 android:src="@drawable/back_arrow" />
@@ -51,8 +52,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:background="#E9EAEC"
         android:layout_height="match_parent"
+        android:background="#E9EAEC"
         android:gravity="center"
         android:orientation="vertical">
 
