--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
     android:id="@+id/Click"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center">
 
     <android.support.v7.widget.CardView
         android:layout_width="200dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/layout_gradient">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:padding="@dimen/_2sdp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/_2sdp">
 
 
             <android.support.v7.widget.CardView
@@ -27,6 +29,7 @@
                     android:layout_height="wrap_content">
 
                     <ImageView
+                        android:id="@+id/StoreImage"
                         android:layout_width="match_parent"
                         android:layout_height="220dp"
                         android:layout_alignParentLeft="true"
@@ -35,14 +38,15 @@
                         android:src="@drawable/images" />
 
                     <TextView
+                        android:id="@+id/Distance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_marginRight="@dimen/_3sdp"
                         android:background="@drawable/rounded"
-                        android:padding="@dimen/_1sdp"
-                        android:paddingLeft="@dimen/_5sdp"
-                        android:paddingRight="@dimen/_5sdp"
+                        android:paddingBottom="@dimen/_2sdp"
+                        android:paddingTop="@dimen/_2sdp"
                         android:text="10 miles"
                         android:textColor="#86C65F"
                         android:textSize="16dp" />
@@ -58,7 +62,7 @@
                 android:padding="2dp">
 
                 <TextView
-                    android:id="@+id/textViewTitle"
+                    android:id="@+id/StoreName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -88,6 +92,7 @@
                     android:textSize="@dimen/_12sdp" />
 
                 <TextView
+                    android:id="@+id/Ratting"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="4.5/5"
@@ -95,6 +100,7 @@
                     android:textSize="@dimen/_12sdp" />
 
                 <TextView
+                    android:id="@+id/Status"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
