--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#79da59</color>
     <color name="green">#79da59</color>
     <color name="Background_activity">#d6d6d6</color>
+    <color name="transprent">#11000000</color>
 </resources>
