Update in Cart and Update in Store Api Update Map and Chat Part Update in Some Design

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:padding="@dimen/_10sdp"
         android:background="#ffffff"
         android:fitsSystemWindows="true"
+        android:paddingTop="@dimen/_20sdp"
+        app:insetForeground="@android:color/darker_gray"
         app:itemTextColor="#8a8a8a"
         app:menu="@menu/activity_main_drawer" />
 
