--- a/app/src/main/res/layout/dialog_product_details.xml
+++ b/app/src/main/res/layout/dialog_product_details.xml
@@ -16,7 +16,7 @@
 
 
         <ImageView
-            android:id="@+id/store_image"
+            android:id="@+id/Image"
             android:layout_width="200dp"
             android:layout_height="150dp"
             android:src="@drawable/pepsi" />
@@ -38,7 +38,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/name"
+                        android:id="@+id/Name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Piza Large Mix"
@@ -53,7 +53,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/address"
+                        android:id="@+id/Details"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="left|center"
@@ -80,23 +80,23 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/minus"
+                    android:id="@+id/Increase"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:padding="5dp"
                     android:src="@drawable/plus_icon" />
 
                 <TextView
-                    android:id="@+id/vlaue"
+                    android:id="@+id/Quantity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="7dp"
                     android:layout_marginTop="10dp"
-                    android:text="2"
+                    android:text="0"
                     android:textColor="#898b8a" />
 
                 <ImageView
-                    android:id="@+id/add"
+                    android:id="@+id/Decrease"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginLeft="7dp"
@@ -105,7 +105,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/price"
+                android:id="@+id/Price"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="end|center"
