--- a/app/src/main/res/layout/fragment_resturent__fragemt.xml
+++ b/app/src/main/res/layout/fragment_resturent__fragemt.xml
@@ -45,11 +45,21 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/Back"
-                        android:layout_width="50dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/back_icon" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:id="@+id/Back"
+                            android:layout_width="50dp"
+                            android:layout_height="30dp"
+                            android:src="@drawable/back_icon" />
+                        <ImageView
+                            android:layout_width="50dp"
+                            android:visibility="invisible"
+                            android:layout_height="20dp"
+                            android:src="@drawable/back_icon" />
+                    </LinearLayout>
 
                     <TextView
                         android:layout_width="match_parent"
