--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -27,7 +27,7 @@
 
 
                 <TextView
-                    android:id="@+id/sequence"
+                    android:id="@+id/ProductName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
@@ -48,11 +48,14 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/Description"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentTop="true"
                         android:layout_weight="1"
+                        android:maxHeight="@dimen/_90sdp"
+                        android:maxLines="1"
                         android:text="Mild scent  for vhoe.." />
 
 
@@ -63,19 +66,22 @@
 
 
                         <ImageView
+                            android:id="@+id/Increase"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:src="@drawable/minus_icon" />
 
                         <TextView
+                            android:id="@+id/Quantity"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentTop="true"
                             android:gravity="center"
-                            android:text="2" />
+                            android:text="0" />
 
                         <ImageView
+                            android:id="@+id/Decrease"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:src="@drawable/plus_icon" />
