--- a/app/src/main/res/layout/item_product_item.xml
+++ b/app/src/main/res/layout/item_product_item.xml
@@ -16,7 +16,7 @@
         card_view:cardCornerRadius="2dp"
         card_view:cardElevation="2dp">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:id="@+id/single_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -52,7 +52,7 @@
 
 
                         <TextView
-                            android:id="@+id/price"
+                            android:id="@+id/Price"
                             android:layout_width="60dp"
                             android:layout_height="20dp"
                             android:layout_alignParentBottom="true"
@@ -65,7 +65,7 @@
                     </RelativeLayout>
 
                     <TextView
-                        android:id="@+id/name"
+                        android:id="@+id/Name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Pepsi Ten Small"
@@ -91,7 +91,7 @@
                             android:orientation="horizontal">
 
                             <ImageView
-                                android:id="@+id/minus"
+                                android:id="@+id/Decrease"
                                 android:layout_width="40dp"
                                 android:layout_height="28dp"
                                 android:padding="5dp"
@@ -99,17 +99,17 @@
                                 android:src="@drawable/minus_icon" />
 
                             <TextView
-                                android:id="@+id/vlaue"
+                                android:id="@+id/Quantity"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:gravity="center"
                                 android:padding="5dp"
-                                android:text="2"
+                                android:text="0"
                                 android:textColor="#000"
                                 android:textStyle="bold" />
 
                             <ImageView
-                                android:id="@+id/add"
+                                android:id="@+id/Increase"
                                 android:layout_width="40dp"
                                 android:layout_height="28dp"
                                 android:padding="5dp"
